# moonlight-toggler

./: .gitignore  LICENCE.md  README.md  build.ps1  config.toml  pyproject.toml  requirements.txt
src/: config.toml  main.py
