[tool.poetry]
name = "moonlight-toggler"
version = "0.2.1"
description = "Switches monitor profiles automatically while Nvidia is streaming through GameStream."
authors = ["Rui Antunes <rui.andre.antunes@gmail.com>"]
license = "MPL v2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
psutil = "^5.9.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
